--- a/templates/blogdetail.html
+++ b/templates/blogdetail.html
@@ -427,7 +427,7 @@ function update_ans(b) {
 					<img src="{{ blog.cover.url }}" alt="">
 					<div id="contenter">
 						
-										{{blog.contenido}}
+										{{blog.contenido|safe}}
 					
 				</div>
 
