--- a/templates/blogdetail.html
+++ b/templates/blogdetail.html
@@ -550,8 +550,9 @@ function update_ans(b) {
 <h6>Inicia Sesión para poder votar.</h6>
     
 
-</div>
-	{% endif %}					<!-- comment items -->
+
+	{% endif %}	
+	</div>				<!-- comment items -->
 					<div class="comments" id="comments">
 						<h4>{{comentarios.count}} Comentarios</h4>
 						{% for comentario in comentarios %}
