--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
     <title>WaoMovies</title>
 
     <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600'>
+    
          <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
            <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
@@ -34,7 +35,7 @@
 <script type="text/javascript" src="{% static '' %}scripts/plugins.js"></script>
 <script type="text/javascript" src="{% static '' %}scripts/custom.js"></script>
 
-  
+  <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c2d2eb9827fa400111abce7&product='inline-share-buttons' async='async'></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone-no">
 
