--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1255,18 +1255,9 @@ $(this).remove();
 </form>
 <br/>
 {% endif %}
-
- <!--Facebook-->
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://127.0.0.1:8000/peliculas/{{peliculaa.slug}}/" type="button" class="btn-floating btn-fb" style="background-color: #3b5998"><i class="fa fa-facebook"></i></a>
-                <!--Twitter-->
-                <a type="button" style="background-color: #00acee" class="btn-floating btn-tw"><i class="fa fa-twitter"></i></a>
-                <!--Google +-->
-                <a type="button" style="background-color: #d34836;" class="btn-floating btn-gplus"><i class="fa fa-google-plus"></i></a>
-
-                <!--Instagram-->
-                <a type="button"  style="background-color: #3f729b;"class="btn-floating btn-ins"><i class="fa fa-instagram"></i></a>
-                <!--Pinterest-->
-                <a type="button"  style="background-color: #c8232c ;"class="btn-floating btn-pin"><i class="fa fa-pinterest"></i></a>
+<div class="sharethis-inline-share-buttons"></div>
+            
+                
     
                 <!--Comments-->
                 <!--a type="button" class="btn-floating btn-comm"><i class="fa fa-comments"></i></a>
