--- a/templates/blogdetail.html
+++ b/templates/blogdetail.html
@@ -488,7 +488,7 @@ function update_ans(b) {
                 <a target="_blank" href="https://plus.google.com/share?url=https://wmoviestest.herokuapp.com/blog/{{blog.categoria}}/{{blog.slug}}/" type="button" style="background-color: #d34836;" class="btn-floating btn-gplus"><i class="fa fa-google-plus" style="color: white;"></i></a>
 
                 <!--Pinterest-->
-                <a target="_blank" href="https://pinterest.com/pin/create/button/?url=https://wmoviestest.herokuapp.com/blog/{{blog.categoria}}/{{blog.slug}}/&media={{blog.Cover.url}}&description={{blog.titulo}}" type="button"  style="background-color: #c8232c ;"class="btn-floating btn-pin"><i class="fa fa-pinterest" style="color: white;"></i></a>
+                <a target="_blank" href="https://pinterest.com/pin/create/button/?url=https://wmoviestest.herokuapp.com/blog/{{blog.categoria}}/{{blog.slug}}/&media={{blog.cover.url}}&description={{blog.titulo}}" type="button"  style="background-color: #c8232c ;"class="btn-floating btn-pin"><i class="fa fa-pinterest" style="color: white;"></i></a>
                 <!--Comments-->
                 <!--a type="button" class="btn-floating btn-comm"><i class="fa fa-comments"></i></a>
                 <Email>
