--- a/templates/bloglist.html
+++ b/templates/bloglist.html
@@ -41,7 +41,7 @@
 				{% if articulos %}
 				{% for articulo in articulos %}
 				<div class="blog-item-style-1 blog-item-style-3">
-            		<img src="{{articulo.cover.url}}" alt="" style="height: 100%;">
+            		<img src="{{articulo.cover.url}}" alt="" style="width:  100%;">
             		<div class="blog-it-infor">
             			<h3><a href="/blog/{{articulo.categoria}}/{{articulo.slug}}/">{{articulo.titulo}}</a></h3>
             			<span class="time">{{articulo.publish}}</span>
