--- a/templates/footer/politicadeprivacidad.html
+++ b/templates/footer/politicadeprivacidad.html
@@ -250,17 +250,14 @@ function updateWidth(){
 
 <h4 id="contact">Cómo contactarnos</h4>
 
-<p>Si tiene alguna pregunta o inquietud sobre el aviso de privacidad de WaoMovies. o su implementación, por favor contáctenos por correo electrónico <a href="https://secure.customersvc.com/servlet/Show?WESPAGE=pp/Services/wes_email.html&amp;MSRSMAG=PP" target="_blank">haciendo clic aquí</a> o por escrito a:</p>
+<p>Si tiene alguna pregunta o inquietud sobre el aviso de privacidad de WaoMovies. o su implementación, por favor contáctenos por correo electrónico <a href="/sobre/" target="_blank">haciendo clic aquí.</a></p>
 
-<address>PEOPLE EN ESPAÑOL Customer Service<br>
-Attention: Consumer Affairs<br>
-3000 University Center Drive<br>
-Tampa, Florida 33612-6408</address>
+
 
   <p><a href="/inicio/">http://www.waomovies.com</a></p>
 
 
-<p>Esta política de privacidad fue revisada el 7 de julio de 2018.</p>
+<p>Esta política de privacidad fue revisada el 5 de enero de 2019.</p>
 
 <div style="display:none;">
 <!--Tealium Pixels-->
