--- a/templates/footer/terminosycondiciones.html
+++ b/templates/footer/terminosycondiciones.html
@@ -89,7 +89,7 @@ disposición en o a través del Sitio Web, se le puede pedir que nos proporcione
 cierta información personalizada (dicha información en lo sucesivo "Información
 del Usuario"). Las políticas de uso y recopilación de información de WaoMovies.
 con respecto a la privacidad de dicha Información del Usuario se establecen en
-la <u><a href="http://www.peopleenespanol.com/pespanol/privacidad">Política de Privacidad</a></u> del Sitio Web, la cual está incorporada al
+la <u><a href="/politicadeprivacidad/">Política de Privacidad</a></u> del Sitio Web, la cual está incorporada al
 mismo como referencia para todos los propósitos. Usted reconoce y acepta ser el
 único responsable de la exactitud del contenido de la Información del Usuario.</span></p>
 
@@ -105,7 +105,7 @@ mandado o presentado (incluyendo, por ejemplo y sin limitación, aquello que
 usted presenta o envía a nuestros grupos de chateo, tablas de mensajes y/o a
 nuestros ‘blogs’, o que nos manda vía correo electrónico) ("Materiales Presentados")
 se considerará como no confidencial o secreto y que puede ser usado por
-nosotros de cualquier manera consistente con la <a name="OLE_LINK2"></a><a name="OLE_LINK1"><u></u></a><u><a href="http://www.peopleenespanol.com/pespanol/privacidad">Política de Privacidad</a></u> del Sitio Web. Al presentarnos
+nosotros de cualquier manera consistente con la <a name="OLE_LINK2"></a><a name="OLE_LINK1"><u></u></a><u><a href="/politicadeprivacidad/">Política de Privacidad</a></u> del Sitio Web. Al presentarnos
 o mandarnos Materiales Presentados, usted: (i) representa y garantiza que los
 Materiales Presentados son originales suyos, que ninguna otra persona tiene
 ningún derecho sobre ellos, y que cualquier "derecho moral" sobre los
@@ -260,7 +260,7 @@ la Digital Millennium Copyright Act, 17 U.S.C. § 512 (c) (2), nombrado abajo:</
 Arial">Fax: 212-467-3320</span></p-->
 
 <p class="MsoNormal" style="text-align:justify"><span lang="FR" style="font-family:
-Arial">e-mail: </span><span lang="ES-MX" style="font-family:Arial"><a href="mailto:copyrightdmca@timeinc.com"><span lang="FR">copyrightdmca@timeinc.com</span></a></span></p>
+Arial">e-mail: </span><span lang="ES-MX" style="font-family:Arial"><a href="mailto:waosoporte@gmail.com"><span lang="FR">waosoporte@gmail.com</span></a></span></p>
 
 <p class="MsoNormal" style="text-align:justify"><span lang="FR" style="font-family:
 Arial">&nbsp;</span></p>
