--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
     <title>WaoMovies</title>
 
-    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600'>
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Dosis:400,700,500|Nunito:300,400,600'>
     
          <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
            <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
@@ -2410,35 +2410,40 @@ function passwordVerify() {
         </button>
       </div>
       <div class="modal-body">
-        <p style="color: black;">– El sitio web Waomovies es un foro que proporciona acceso a la información y contenido de vídeo a sus miembros registrados mediante el uso de la tecnología de “Insersión de Videos”.
+        <p>– El sitio web Waomovies es un foro que proporciona acceso a la información y contenido de vídeo a sus miembros registrados mediante el uso de la tecnología de “Insersión de Videos”.</p>
 
-– Todos los archivos de vídeo están alojados en idowatch.net, sevenload.com, vipshare.org, openload.co, powvideo.net, netu.tv, YouTube.com, video.google.com, o páginas web similares.
+<p>– Todos los archivos de vídeo están alojados en idowatch.net, sevenload.com, vipshare.org, openload.co, powvideo.net, netu.tv, YouTube.com, video.google.com, rapidvideo, streamago, vidlox,vidoza, o páginas web similares.</p>
 
-– El sitio web  Waomovies y sus usuarios encuentran esos archivos y lo agregan exclusivamente en forma de archivos textuales que son reproducidos mediante el Reproductor Flash (códigos de video insertados). Por lo tanto, Waomovies es un índice y una base de datos de vídeos insertados de sitios que ofrecen compartir vídeos.
+<p>– El sitio web  Waomovies y sus usuarios encuentran esos archivos y lo agregan exclusivamente en forma de archivos textuales que son reproducidos mediante el Reproductor Flash (códigos de video insertados). Por lo tanto, Waomovies es un índice y una base de datos de vídeos insertados de sitios que ofrecen compartir vídeos.</p>
 
-– La web Waomovies no almacena ni sube en su sitio o servidor, cualquier archivo de vídeo, película, archivo multimedia (por ejemplo, avi, mov, flv, mpg, mpeg, divx, dvd rip, mp3, mp4 , torrent, iPod, PSP) o cualquier otro material protegido por derechos de autor.
+<p>– La web Waomovies no almacena ni sube en su sitio o servidor, cualquier archivo de vídeo, película, archivo multimedia (por ejemplo, avi, mov, flv, mpg, mpeg, divx, dvd rip, mp3, mp4 , torrent, iPod, PSP) o cualquier otro material protegido por derechos de autor.</p>
 
-– El sitio web  Waomovies no es responsable por la precicion, cumplimiento, la infracción de los derechos de autor, legalidad, decencia, o cualquier otro aspecto del contenido de otros sitios enlazados.
+<p>– El sitio web  Waomovies no es responsable por la infracción de los derechos de autor, legalidad, o cualquier otro aspecto del contenido de otros sitios enlazados.</p>
 
-– Si tiene cualquier reclamación legal sobre el contenido que se encuentra en los sitios enlazados, por favor póngase en contacto con los medios adecuados; los propietrios de los archivos, hosters o uploaders.
+<p>– Si tiene cualquier reclamación legal sobre el contenido que se encuentra en los sitios enlazados, por favor póngase en contacto con los medios adecuados; los propietarios de los archivos, hosters o uploaders.</p>
 
-Waomovies está de acuerdo con 17 USC § 512 y la Digital Millennium Copyright Act (“DMCA”). Es nuestra política responder a cualquier notificación de infracción y tomar las acciones apropiadas bajo la Digital Millennium Copyright Act (“DMCA”) y otras leyes de propiedad intelectual aplicables.
+<p>Waomovies está de acuerdo con 17 USC § 512 y la Digital Millennium Copyright Act (“DMCA”). Es nuestra política responder a cualquier notificación de infracción y tomar las acciones apropiadas bajo la Digital Millennium Copyright Act (“DMCA”) y otras leyes de propiedad intelectual aplicables.</p>
 
-Si su material con derechos de autor se ha publicado en Waomovies o si enlaces a su material con derechos de autor se devuelven a través de nuestro motor de búsqueda y desea que ese material sea removido, usted debe proporcionar una comunicación escrita que detalla la información que se indica en la siguiente sección. Tenga en cuenta que usted será responsable de los daños y perjuicios (incluidos gastos y honorarios de abogados) si tergiversa informacion que figura en nuestro sitio que está infringiendo sus derechos de autor. Le sugerimos que primero se ponga en contacto con un abogado de asistencia legal en esta materia.
+<p>Si su material con derechos de autor se ha publicado en Waomovies o si enlaces a su material con derechos de autor se devuelven a través de nuestro motor de búsqueda y desea que ese material sea removido, usted debe proporcionar una comunicación escrita que detalla la información que se indica en la siguiente sección. Tenga en cuenta que usted será responsable de los daños y perjuicios (incluidos gastos y honorarios de abogados) si tergiversa informacion que figura en nuestro sitio que está infringiendo sus derechos de autor. Le sugerimos que primero se ponga en contacto con un abogado de asistencia legal en esta materia.</p>
 
 
-Los siguientes elementos deben ser incluidos en su demanda por infracción de derechos de autor:
+<p>Los siguientes elementos deben ser incluidos en su demanda por infracción de derechos de autor:</p>
+<ul>
+<li>Proporcionar evidencia de la persona autorizada para actuar en nombre del titular de un derecho exclusivo que presuntamente se ha infringido.</li>
 
-Proporcionar evidencia de la persona autorizada para actuar en nombre del titular de un derecho exclusivo que presuntamente se ha infringido.
-Proporcionar información de contacto suficiente para que podamos comunicarnos con usted. También debe incluir una dirección de correo electrónico válida.
-Debe identificar detalladamente el trabajo cuyos derechos de autor han sido violados y que incluye al menos un término de búsqueda en las que el material aparece en los resultados de búsqueda de Waomovies .
-Una declaración de que la parte reclamante cree de buena fe que el uso del material descrito en la reclamación no está autorizado por el propietario del copyright, su agente o la ley.
-Una declaración que afirme que la información de la notificación es exacta, y bajo pena de perjurio, que la parte reclamante está autorizada a actuar en nombre del titular de un derecho que presuntamente se ha infringido.
-Debe ser firmado por la persona autorizada para actuar en nombre del titular de un derecho que presuntamente se ha infringido.
+<li>Proporcionar información de contacto suficiente para que podamos comunicarnos con usted. También debe incluir una dirección de correo electrónico válida.</li>
 
-Enviar el aviso de infracción por un correo electrónico a dmca@pelispedia.tv
+<li>Debe identificar detalladamente el trabajo cuyos derechos de autor han sido violados y que incluye al menos un término de búsqueda en las que el material aparece en los resultados de búsqueda de Waomovies.</li>
 
-Por favor, espere entre 3 y 7 días hábiles para una respuesta. Tenga en cuenta que el envío de su queja a otras partes, como nuestro proveedor de servicios de Internet no acelerará su solicitud y puede resultar en una respuesta retrasada o nula debido a que la denuncia no pudo haber sido presentado correctamente.</p>
+<li>Una declaración de que la parte reclamante cree de buena fe que el uso del material descrito en la reclamación no está autorizado por el propietario del copyright, su agente o la ley.</li>
+
+<li>Una declaración que afirme que la información de la notificación es exacta, y bajo pena de perjurio, que la parte reclamante está autorizada a actuar en nombre del titular de un derecho que presuntamente se ha infringido.</li>
+
+<li>Debe ser firmado por la persona autorizada para actuar en nombre del titular de un derecho que presuntamente se ha infringido.</li>
+
+<li>Enviar el aviso de infracción por un correo electrónico a waosoporte@gmail.com </li>
+</ul>
+<p>Por favor, espere entre 3 y 7 días hábiles para una respuesta. Tenga en cuenta que el envío de su queja a otras partes, como nuestro proveedor de servicios de Internet no acelerará su solicitud y puede resultar en una respuesta retrasada o nula debido a que la denuncia no pudo haber sido presentado correctamente.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -2451,7 +2456,6 @@ Por favor, espere entre 3 y 7 días hábiles para una respuesta. Tenga en cuenta
       <div class="flex-child-ft item4 col-md-4">
         <h4>Cuenta</h4>
         <ul>
-          <li><a href="#">Menú Wao</a></li>  
           <li><a href="#">Guía de usuario</a></li>
         </ul>
       </div>
