--- a/templates/sobre/index.html
+++ b/templates/sobre/index.html
@@ -161,7 +161,9 @@
 								<div class="desc">
 									<a href="#"><h4>Usuarios</h4></a>
 									<p>
-										Contamos con un sistema de usuario que una vez estés registrado, a través de muy poca información que nos proporciones, podremos relacionar contenido a su gusto.
+
+										Contamos con un amplio sistema de usuario cuya principal característica es poder recomendarle contenido a su gusto a través de sus preferencias como usuario, es decir las películas que añada a sus favoritos y los generos que más les gusten.
+										
 									</p>
 								</div>
 							</div>
@@ -172,7 +174,7 @@
 								<div class="desc">
 									<a href="#"><h4>Apps</h4></a>
 									<p>
-										Desarrollamos sistemas de comentarios, de votación, like y discusión para que pueda compartir su criterio a través de Wao y interactuar con el de otros usuarios, de seguro como usuario de internet ya esté familiarizado con lo anterior mencionado, sin embago le recomendamos leer la guía de usuario para saber más en especial sobre la sección de discusiones.
+										Contamos con sistemas de comentarios, votación, ver más tarde, favoritos, añadir amigos y compartir con amigos, para que puedas interactuar y compartir una buena película con tus más cercanos.
 									</p>
 								</div>
 							</div>
@@ -185,7 +187,7 @@
 								<div class="desc">
 									<a href="#"><h4>Segurídad</h4></a>
 									<p>
-										No podemos predecir el futuro, pero por ahora la única información valiosa que introducirá en WaoMovies, será su correo electronico y su nombre real, los otros usuarios y ni siquiera WaoMovies tendran acceso a esos datos sin su consentimiento, por ello le aseguramos total privacidad, para más información puede leer los terminos de privacidad.
+										No podemos predecir el futuro, pero por ahora la única información valiosa que introducirá en WaoMovies, será su correo electronico y su nombre real, los otros usuarios y ni siquiera WaoMovies tendran acceso a esos datos sin su consentimiento, por ello le aseguramos total privacidad, para más información puede leer los terminos de <a href="/politicadeprivacidad/"><h4>privacidad.</h4></a>.
 									</p>
 								</div>
 							</div>
@@ -196,7 +198,7 @@
 								<div class="desc">
 									<a href="#"><h4>Calidad</h4></a>
 									<p>
-										La calidad no es una opción para Wao es una obligación, estamos en constante mejora de nuestros servicios y abiertos a sugerencias.
+										La calidad no es una opción para Wao es una obligación, estamos en constante mejora de nuestros servicios y abiertos a sugerencias, por lo tanto si tiene alguna, no dude contactanos a través del formulario al final de esta página...
 									</p>
 								</div>
 							</div>
@@ -217,7 +219,7 @@
 							</h1>
 							<p><span>Como usar WaoMovies</span></p>
 							<p>
-								WaoMovies cuenta con una interfaz de usuario bastante amplia, con un soporte del mismo nivel, por ello creo que todos los usuarios deben estar informados, y saber que hacer cuando olvíde su contraseña, sino puede acceder a WaoMovies, o si desea cambiar la información de usuario, etc...
+								WaoMovies cuenta con una interfaz de usuario bastante amplia,por lo tanto con un soporte del mismo nivel, por ello creo que todos los usuarios deben estar informados para saber que hacer cuando olvíde su contraseña, en caso que no pueda acceder a WaoMovies, o sí desea cambiar la información de usuario, etc...
 							</p>
 						</div>
 						<section class="video-area col-lg-6" style="padding: 200px 0 200px 0;
@@ -248,7 +250,7 @@
 							<h1 class="text-white" style="text-align: center;">Películas y series <br>
 							</h1>
 							<p style="position: relative; left: 2px;">
-								Sí es cierto que nosotros no alojamos las películas ni las series en nuestros servidores, sin embargo tratamos de ofrecerte la mejor calidad, en caso de películas en estreno, tenemos una sección en waomovies que muestra los trailers de las películas en estreno con más demanda por los usuarios del cine, pero estas películas aparecerán en WaoMovies una vez y estén fuera de las salas de cine.
+								Si es cierto que nosotros no alojamos las películas ni las series en nuestros servidores, sin embargo, tratamos de ofrecerte la mejor calidad. en caso de películas en estreno, tenemos una sección en waomovies que muestra los trailers de las películas en estreno con más demanda por los usuarios del cine, pero estas películas aparecerán en WaoMovies una vez y estén fuera de las salas de cine.
 							</p>
 						</div>
 					</div>
@@ -649,35 +651,40 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>– El sitio web Waomovies es un foro que proporciona acceso a la información y contenido de vídeo a sus miembros registrados mediante el uso de la tecnología de “Insersión de Videos”.
+        <p>– El sitio web Waomovies es un foro que proporciona acceso a la información y contenido de vídeo a sus miembros registrados mediante el uso de la tecnología de “Insersión de Videos”.</p>
 
-– Todos los archivos de vídeo están alojados en idowatch.net, sevenload.com, vipshare.org, openload.co, powvideo.net, netu.tv, YouTube.com, video.google.com, o páginas web similares.
+<p>– Todos los archivos de vídeo están alojados en idowatch.net, sevenload.com, vipshare.org, openload.co, powvideo.net, netu.tv, YouTube.com, video.google.com, rapidvideo, streamago, vidlox,vidoza, o páginas web similares.</p>
 
-– El sitio web  Waomovies y sus usuarios encuentran esos archivos y lo agregan exclusivamente en forma de archivos textuales que son reproducidos mediante el Reproductor Flash (códigos de video insertados). Por lo tanto, Waomovies es un índice y una base de datos de vídeos insertados de sitios que ofrecen compartir vídeos.
+<p>– El sitio web  Waomovies y sus usuarios encuentran esos archivos y lo agregan exclusivamente en forma de archivos textuales que son reproducidos mediante el Reproductor Flash (códigos de video insertados). Por lo tanto, Waomovies es un índice y una base de datos de vídeos insertados de sitios que ofrecen compartir vídeos.</p>
 
-– La web Waomovies no almacena ni sube en su sitio o servidor, cualquier archivo de vídeo, película, archivo multimedia (por ejemplo, avi, mov, flv, mpg, mpeg, divx, dvd rip, mp3, mp4 , torrent, iPod, PSP) o cualquier otro material protegido por derechos de autor.
+<p>– La web Waomovies no almacena ni sube en su sitio o servidor, cualquier archivo de vídeo, película, archivo multimedia (por ejemplo, avi, mov, flv, mpg, mpeg, divx, dvd rip, mp3, mp4 , torrent, iPod, PSP) o cualquier otro material protegido por derechos de autor.</p>
 
-– El sitio web  Waomovies no es responsable por la precicion, cumplimiento, la infracción de los derechos de autor, legalidad, decencia, o cualquier otro aspecto del contenido de otros sitios enlazados.
+<p>– El sitio web  Waomovies no es responsable por la infracción de los derechos de autor, legalidad, o cualquier otro aspecto del contenido de otros sitios enlazados.</p>
 
-– Si tiene cualquier reclamación legal sobre el contenido que se encuentra en los sitios enlazados, por favor póngase en contacto con los medios adecuados; los propietrios de los archivos, hosters o uploaders.
+<p>– Si tiene cualquier reclamación legal sobre el contenido que se encuentra en los sitios enlazados, por favor póngase en contacto con los medios adecuados; los propietarios de los archivos, hosters o uploaders.</p>
 
-Waomovies está de acuerdo con 17 USC § 512 y la Digital Millennium Copyright Act (“DMCA”). Es nuestra política responder a cualquier notificación de infracción y tomar las acciones apropiadas bajo la Digital Millennium Copyright Act (“DMCA”) y otras leyes de propiedad intelectual aplicables.
+<p>Waomovies está de acuerdo con 17 USC § 512 y la Digital Millennium Copyright Act (“DMCA”). Es nuestra política responder a cualquier notificación de infracción y tomar las acciones apropiadas bajo la Digital Millennium Copyright Act (“DMCA”) y otras leyes de propiedad intelectual aplicables.</p>
 
-Si su material con derechos de autor se ha publicado en Waomovies o si enlaces a su material con derechos de autor se devuelven a través de nuestro motor de búsqueda y desea que ese material sea removido, usted debe proporcionar una comunicación escrita que detalla la información que se indica en la siguiente sección. Tenga en cuenta que usted será responsable de los daños y perjuicios (incluidos gastos y honorarios de abogados) si tergiversa informacion que figura en nuestro sitio que está infringiendo sus derechos de autor. Le sugerimos que primero se ponga en contacto con un abogado de asistencia legal en esta materia.
+<p>Si su material con derechos de autor se ha publicado en Waomovies o si enlaces a su material con derechos de autor se devuelven a través de nuestro motor de búsqueda y desea que ese material sea removido, usted debe proporcionar una comunicación escrita que detalla la información que se indica en la siguiente sección. Tenga en cuenta que usted será responsable de los daños y perjuicios (incluidos gastos y honorarios de abogados) si tergiversa informacion que figura en nuestro sitio que está infringiendo sus derechos de autor. Le sugerimos que primero se ponga en contacto con un abogado de asistencia legal en esta materia.</p>
 
 
-Los siguientes elementos deben ser incluidos en su demanda por infracción de derechos de autor:
+<p>Los siguientes elementos deben ser incluidos en su demanda por infracción de derechos de autor:</p>
+<ul>
+<li>Proporcionar evidencia de la persona autorizada para actuar en nombre del titular de un derecho exclusivo que presuntamente se ha infringido.</li>
 
-Proporcionar evidencia de la persona autorizada para actuar en nombre del titular de un derecho exclusivo que presuntamente se ha infringido.
-Proporcionar información de contacto suficiente para que podamos comunicarnos con usted. También debe incluir una dirección de correo electrónico válida.
-Debe identificar detalladamente el trabajo cuyos derechos de autor han sido violados y que incluye al menos un término de búsqueda en las que el material aparece en los resultados de búsqueda de Waomovies .
-Una declaración de que la parte reclamante cree de buena fe que el uso del material descrito en la reclamación no está autorizado por el propietario del copyright, su agente o la ley.
-Una declaración que afirme que la información de la notificación es exacta, y bajo pena de perjurio, que la parte reclamante está autorizada a actuar en nombre del titular de un derecho que presuntamente se ha infringido.
-Debe ser firmado por la persona autorizada para actuar en nombre del titular de un derecho que presuntamente se ha infringido.
+<li>Proporcionar información de contacto suficiente para que podamos comunicarnos con usted. También debe incluir una dirección de correo electrónico válida.</li>
 
-Enviar el aviso de infracción por un correo electrónico a dmca@pelispedia.tv
+<li>Debe identificar detalladamente el trabajo cuyos derechos de autor han sido violados y que incluye al menos un término de búsqueda en las que el material aparece en los resultados de búsqueda de Waomovies.</li>
 
-Por favor, espere entre 3 y 7 días hábiles para una respuesta. Tenga en cuenta que el envío de su queja a otras partes, como nuestro proveedor de servicios de Internet no acelerará su solicitud y puede resultar en una respuesta retrasada o nula debido a que la denuncia no pudo haber sido presentado correctamente.</p>
+<li>Una declaración de que la parte reclamante cree de buena fe que el uso del material descrito en la reclamación no está autorizado por el propietario del copyright, su agente o la ley.</li>
+
+<li>Una declaración que afirme que la información de la notificación es exacta, y bajo pena de perjurio, que la parte reclamante está autorizada a actuar en nombre del titular de un derecho que presuntamente se ha infringido.</li>
+
+<li>Debe ser firmado por la persona autorizada para actuar en nombre del titular de un derecho que presuntamente se ha infringido.</li>
+
+<li>Enviar el aviso de infracción por un correo electrónico a waosoporte@gmail.com </li>
+</ul>
+<p>Por favor, espere entre 3 y 7 días hábiles para una respuesta. Tenga en cuenta que el envío de su queja a otras partes, como nuestro proveedor de servicios de Internet no acelerará su solicitud y puede resultar en una respuesta retrasada o nula debido a que la denuncia no pudo haber sido presentado correctamente.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -690,7 +697,6 @@ Por favor, espere entre 3 y 7 días hábiles para una respuesta. Tenga en cuenta
       <div class="flex-child-ft item4">
         <h4>Cuenta</h4>
         <ul>
-          <li><a href="#">Menú Wao</a></li>  
           <li><a href="#">Guía de usuario</a></li>
         </ul>
       </div>
